# eos-rate

./: .all-contributorsrc  .env  .env.example  .gitignore  .travis.yml  .travis.yml-todo  CODE_OF_CONDUCT.md  Dockerfile  README.md  contributing.md  docker-compose.staging.yml  docker-compose.yml  eosio.assert.json  gulpfile.js  mainnet-producers.json  makefile  netlify.toml  nginx.conf  now.json  package-lock.json  package.json  readme.md
.github/: pull_request_template.md
contracts/: .gitignore  CMakeLists.txt  build.sh  package.json
contracts/rateproducer/: CMakeLists.txt  README.md  hello.cpp  makefile  rateproducer.abi  rateproducer.cpp  rateproducer.js  rateproducer.wasm  rateproducer_mainnet.abi  rateproducer_mainnet_mainnet.wasm  rateproducer_testnet.abi  rateproducer_testnet.wasm
contracts/rateproducer/include/: rateproducer.hpp  utils.hpp
contracts/rateproducer/ricardian/: rateproducer-ricardian.cpp  rateproducer.clauses.md  rateproducer.contracts.md
contracts/rateproducer/src/: rateproducer.cpp
demux/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
docs/: EOS-Rate-Diagram.xml  create-a-release.md
hapi/: .eslintrc.js  Dockerfile  makefile  package.json  prettier.config.js
hasura/: Dockerfile  config.yaml  makefile
kubernetes/: configmap-dashboard.yaml  configmaps.yaml  cronjob.yaml  demux-deployment.yaml  demux-service.yaml  frontend-deployment.yaml  frontend-service.yaml  hapi-deployment.yaml  hapi-service.yaml  hasura-deployment.yaml  hasura-service.yaml  ingress.yaml  pgweb-deployment.yaml  pgweb-service.yaml  (+6 more)
(+1020 files in other folders)
